--- a/ZhiRuo/ZhiRuo/ZhiRuo.csproj
+++ b/ZhiRuo/ZhiRuo/ZhiRuo.csproj
@@ -160,6 +160,11 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="HeroII\Maps\Map001.json" />
+    <Content Include="HeroII\Maps\Map002.json" />
+    <Content Include="HeroII\Maps\Map003.json" />
+    <Content Include="HeroII\Maps\Map004.json" />
+    <Content Include="HeroII\Maps\Map012.json" />
     <Content Include="HeroII\rpg_xr.js" />
     <Content Include="HeroII\rpg_xname.js" />
     <Content Include="HeroII\rpg_xtalk.js" />
@@ -214,20 +219,364 @@
     <Content Include="HeroII\Troops.json" />
     <Content Include="HeroII\Weapons.json" />
     <Content Include="HeroII\Skills.json" />
-    <Content Include="HeroII\Maps\Map012.json" />
-    <Content Include="HeroII\Maps\Animations.json" />
-    <Content Include="HeroII\Maps\Armors.json" />
-    <Content Include="HeroII\Maps\Classes.json" />
-    <Content Include="HeroII\Maps\CommonEvents.json" />
-    <Content Include="HeroII\Maps\Enemies.json" />
-    <Content Include="HeroII\Maps\Items.json" />
-    <Content Include="HeroII\Maps\MapInfos.json" />
-    <Content Include="HeroII\Maps\Skills.json" />
-    <Content Include="HeroII\Maps\States.json" />
-    <Content Include="HeroII\Maps\System.json" />
-    <Content Include="HeroII\Maps\Tilesets.json" />
-    <Content Include="HeroII\Maps\Troops.json" />
-    <Content Include="HeroII\Maps\Weapons.json" />
+    <Content Include="HeroII\Weapons - 复制.json" />
+    <Content Include="HeroII\Maps\Map005.json" />
+    <Content Include="HeroII\Maps\Map006.json" />
+    <Content Include="HeroII\Maps\Map007.json" />
+    <Content Include="HeroII\Maps\Map008.json" />
+    <Content Include="HeroII\Maps\Map009.json" />
+    <Content Include="HeroII\Maps\Map010.json" />
+    <Content Include="HeroII\Maps\Map011.json" />
+    <Content Include="HeroII\Maps\Map013.json" />
+    <Content Include="HeroII\Maps\Map014.json" />
+    <Content Include="HeroII\Maps\Map015.json" />
+    <Content Include="HeroII\Maps\Map016.json" />
+    <Content Include="HeroII\Maps\Map017.json" />
+    <Content Include="HeroII\Maps\Map018.json" />
+    <Content Include="HeroII\Maps\Map019.json" />
+    <Content Include="HeroII\Maps\Map020.json" />
+    <Content Include="HeroII\Maps\Map021.json" />
+    <Content Include="HeroII\Maps\Map022.json" />
+    <Content Include="HeroII\Maps\Map023.json" />
+    <Content Include="HeroII\Maps\Map024.json" />
+    <Content Include="HeroII\Maps\Map025.json" />
+    <Content Include="HeroII\Maps\Map026.json" />
+    <Content Include="HeroII\Maps\Map027.json" />
+    <Content Include="HeroII\Maps\Map028.json" />
+    <Content Include="HeroII\Maps\Map029.json" />
+    <Content Include="HeroII\Maps\Map030.json" />
+    <Content Include="HeroII\Maps\Map031.json" />
+    <Content Include="HeroII\Maps\Map032.json" />
+    <Content Include="HeroII\Maps\Map033.json" />
+    <Content Include="HeroII\Maps\Map034.json" />
+    <Content Include="HeroII\Maps\Map035.json" />
+    <Content Include="HeroII\Maps\Map036.json" />
+    <Content Include="HeroII\Maps\Map037.json" />
+    <Content Include="HeroII\Maps\Map038.json" />
+    <Content Include="HeroII\Maps\Map039.json" />
+    <Content Include="HeroII\Maps\Map040.json" />
+    <Content Include="HeroII\Maps\Map041.json" />
+    <Content Include="HeroII\Maps\Map042.json" />
+    <Content Include="HeroII\Maps\Map043.json" />
+    <Content Include="HeroII\Maps\Map044.json" />
+    <Content Include="HeroII\Maps\Map045.json" />
+    <Content Include="HeroII\Maps\Map046.json" />
+    <Content Include="HeroII\Maps\Map047.json" />
+    <Content Include="HeroII\Maps\Map048.json" />
+    <Content Include="HeroII\Maps\Map049.json" />
+    <Content Include="HeroII\Maps\Map050.json" />
+    <Content Include="HeroII\Maps\Map051.json" />
+    <Content Include="HeroII\Maps\Map052.json" />
+    <Content Include="HeroII\Maps\Map053.json" />
+    <Content Include="HeroII\Maps\Map054.json" />
+    <Content Include="HeroII\Maps\Map055.json" />
+    <Content Include="HeroII\Maps\Map056.json" />
+    <Content Include="HeroII\Maps\Map057.json" />
+    <Content Include="HeroII\Maps\Map058.json" />
+    <Content Include="HeroII\Maps\Map059.json" />
+    <Content Include="HeroII\Maps\Map060.json" />
+    <Content Include="HeroII\Maps\Map061.json" />
+    <Content Include="HeroII\Maps\Map062.json" />
+    <Content Include="HeroII\Maps\Map063.json" />
+    <Content Include="HeroII\Maps\Map064.json" />
+    <Content Include="HeroII\Maps\Map065.json" />
+    <Content Include="HeroII\Maps\Map066.json" />
+    <Content Include="HeroII\Maps\Map067.json" />
+    <Content Include="HeroII\Maps\Map068.json" />
+    <Content Include="HeroII\Maps\Map069.json" />
+    <Content Include="HeroII\Maps\Map070.json" />
+    <Content Include="HeroII\Maps\Map071.json" />
+    <Content Include="HeroII\Maps\Map072.json" />
+    <Content Include="HeroII\Maps\Map073.json" />
+    <Content Include="HeroII\Maps\Map074.json" />
+    <Content Include="HeroII\Maps\Map075.json" />
+    <Content Include="HeroII\Maps\Map076.json" />
+    <Content Include="HeroII\Maps\Map077.json" />
+    <Content Include="HeroII\Maps\Map078.json" />
+    <Content Include="HeroII\Maps\Map079.json" />
+    <Content Include="HeroII\Maps\Map080.json" />
+    <Content Include="HeroII\Maps\Map081.json" />
+    <Content Include="HeroII\Maps\Map082.json" />
+    <Content Include="HeroII\Maps\Map083.json" />
+    <Content Include="HeroII\Maps\Map084.json" />
+    <Content Include="HeroII\Maps\Map085.json" />
+    <Content Include="HeroII\Maps\Map086.json" />
+    <Content Include="HeroII\Maps\Map087.json" />
+    <Content Include="HeroII\Maps\Map088.json" />
+    <Content Include="HeroII\Maps\Map089.json" />
+    <Content Include="HeroII\Maps\Map090.json" />
+    <Content Include="HeroII\Maps\Map091.json" />
+    <Content Include="HeroII\Maps\Map092.json" />
+    <Content Include="HeroII\Maps\Map093.json" />
+    <Content Include="HeroII\Maps\Map094.json" />
+    <Content Include="HeroII\Maps\Map095.json" />
+    <Content Include="HeroII\Maps\Map096.json" />
+    <Content Include="HeroII\Maps\Map097.json" />
+    <Content Include="HeroII\Maps\Map098.json" />
+    <Content Include="HeroII\Maps\Map099.json" />
+    <Content Include="HeroII\Maps\Map100.json" />
+    <Content Include="HeroII\Maps\Map101.json" />
+    <Content Include="HeroII\Maps\Map102.json" />
+    <Content Include="HeroII\Maps\Map103.json" />
+    <Content Include="HeroII\Maps\Map104.json" />
+    <Content Include="HeroII\Maps\Map105.json" />
+    <Content Include="HeroII\Maps\Map106.json" />
+    <Content Include="HeroII\Maps\Map107.json" />
+    <Content Include="HeroII\Maps\Map108.json" />
+    <Content Include="HeroII\Maps\Map109.json" />
+    <Content Include="HeroII\Maps\Map110.json" />
+    <Content Include="HeroII\Maps\Map111.json" />
+    <Content Include="HeroII\Maps\Map112.json" />
+    <Content Include="HeroII\Maps\Map113.json" />
+    <Content Include="HeroII\Maps\Map114.json" />
+    <Content Include="HeroII\Maps\Map115.json" />
+    <Content Include="HeroII\Maps\Map116.json" />
+    <Content Include="HeroII\Maps\Map117.json" />
+    <Content Include="HeroII\Maps\Map118.json" />
+    <Content Include="HeroII\Maps\Map119.json" />
+    <Content Include="HeroII\Maps\Map120.json" />
+    <Content Include="HeroII\Maps\Map121.json" />
+    <Content Include="HeroII\Maps\Map122.json" />
+    <Content Include="HeroII\Maps\Map123.json" />
+    <Content Include="HeroII\Maps\Map124.json" />
+    <Content Include="HeroII\Maps\Map125.json" />
+    <Content Include="HeroII\Maps\Map126.json" />
+    <Content Include="HeroII\Maps\Map127.json" />
+    <Content Include="HeroII\Maps\Map128.json" />
+    <Content Include="HeroII\Maps\Map129.json" />
+    <Content Include="HeroII\Maps\Map130.json" />
+    <Content Include="HeroII\Maps\Map131.json" />
+    <Content Include="HeroII\Maps\Map132.json" />
+    <Content Include="HeroII\Maps\Map133.json" />
+    <Content Include="HeroII\Maps\Map134.json" />
+    <Content Include="HeroII\Maps\Map135.json" />
+    <Content Include="HeroII\Maps\Map136.json" />
+    <Content Include="HeroII\Maps\Map137.json" />
+    <Content Include="HeroII\Maps\Map138.json" />
+    <Content Include="HeroII\Maps\Map139.json" />
+    <Content Include="HeroII\Maps\Map140.json" />
+    <Content Include="HeroII\Maps\Map141.json" />
+    <Content Include="HeroII\Maps\Map142.json" />
+    <Content Include="HeroII\Maps\Map143.json" />
+    <Content Include="HeroII\Maps\Map144.json" />
+    <Content Include="HeroII\Maps\Map145.json" />
+    <Content Include="HeroII\Maps\Map146.json" />
+    <Content Include="HeroII\Maps\Map147.json" />
+    <Content Include="HeroII\Maps\Map148.json" />
+    <Content Include="HeroII\Maps\Map149.json" />
+    <Content Include="HeroII\Maps\Map150.json" />
+    <Content Include="HeroII\Maps\Map151.json" />
+    <Content Include="HeroII\Maps\Map152.json" />
+    <Content Include="HeroII\Maps\Map153.json" />
+    <Content Include="HeroII\Maps\Map154.json" />
+    <Content Include="HeroII\Maps\Map155.json" />
+    <Content Include="HeroII\Maps\Map156.json" />
+    <Content Include="HeroII\Maps\Map157.json" />
+    <Content Include="HeroII\Maps\Map158.json" />
+    <Content Include="HeroII\Maps\Map159.json" />
+    <Content Include="HeroII\Maps\Map160.json" />
+    <Content Include="HeroII\Maps\Map161.json" />
+    <Content Include="HeroII\Maps\Map162.json" />
+    <Content Include="HeroII\Maps\Map163.json" />
+    <Content Include="HeroII\Maps\Map164.json" />
+    <Content Include="HeroII\Maps\Map165.json" />
+    <Content Include="HeroII\Maps\Map166.json" />
+    <Content Include="HeroII\Maps\Map167.json" />
+    <Content Include="HeroII\Maps\Map168.json" />
+    <Content Include="HeroII\Maps\Map169.json" />
+    <Content Include="HeroII\Maps\Map170.json" />
+    <Content Include="HeroII\Maps\Map171.json" />
+    <Content Include="HeroII\Maps\Map172.json" />
+    <Content Include="HeroII\Maps\Map173.json" />
+    <Content Include="HeroII\Maps\Map174.json" />
+    <Content Include="HeroII\Maps\Map175.json" />
+    <Content Include="HeroII\Maps\Map176.json" />
+    <Content Include="HeroII\Maps\Map177.json" />
+    <Content Include="HeroII\Maps\Map178.json" />
+    <Content Include="HeroII\Maps\Map179.json" />
+    <Content Include="HeroII\Maps\Map180.json" />
+    <Content Include="HeroII\Maps\Map181.json" />
+    <Content Include="HeroII\Maps\Map182.json" />
+    <Content Include="HeroII\Maps\Map183.json" />
+    <Content Include="HeroII\Maps\Map184.json" />
+    <Content Include="HeroII\Maps\Map185.json" />
+    <Content Include="HeroII\Maps\Map186.json" />
+    <Content Include="HeroII\Maps\Map187.json" />
+    <Content Include="HeroII\Maps\Map188.json" />
+    <Content Include="HeroII\Maps\Map189.json" />
+    <Content Include="HeroII\Maps\Map190.json" />
+    <Content Include="HeroII\Maps\Map191.json" />
+    <Content Include="HeroII\Maps\Map192.json" />
+    <Content Include="HeroII\Maps\Map193.json" />
+    <Content Include="HeroII\Maps\Map194.json" />
+    <Content Include="HeroII\Maps\Map195.json" />
+    <Content Include="HeroII\Maps\Map196.json" />
+    <Content Include="HeroII\Maps\Map197.json" />
+    <Content Include="HeroII\Maps\Map198.json" />
+    <Content Include="HeroII\Maps\Map199.json" />
+    <Content Include="HeroII\Maps\Map200.json" />
+    <Content Include="HeroII\Maps\Map201.json" />
+    <Content Include="HeroII\Maps\Map202.json" />
+    <Content Include="HeroII\Maps\Map203.json" />
+    <Content Include="HeroII\Maps\Map204.json" />
+    <Content Include="HeroII\Maps\Map205.json" />
+    <Content Include="HeroII\Maps\Map206.json" />
+    <Content Include="HeroII\Maps\Map207.json" />
+    <Content Include="HeroII\Maps\Map208.json" />
+    <Content Include="HeroII\Maps\Map209.json" />
+    <Content Include="HeroII\Maps\Map210.json" />
+    <Content Include="HeroII\Maps\Map211.json" />
+    <Content Include="HeroII\Maps\Map212.json" />
+    <Content Include="HeroII\Maps\Map213.json" />
+    <Content Include="HeroII\Maps\Map214.json" />
+    <Content Include="HeroII\Maps\Map215.json" />
+    <Content Include="HeroII\Maps\Map216.json" />
+    <Content Include="HeroII\Maps\Map217.json" />
+    <Content Include="HeroII\Maps\Map218.json" />
+    <Content Include="HeroII\Maps\Map219.json" />
+    <Content Include="HeroII\Maps\Map220.json" />
+    <Content Include="HeroII\Maps\Map221.json" />
+    <Content Include="HeroII\Maps\Map222.json" />
+    <Content Include="HeroII\Maps\Map223.json" />
+    <Content Include="HeroII\Maps\Map224.json" />
+    <Content Include="HeroII\Maps\Map225.json" />
+    <Content Include="HeroII\Maps\Map226.json" />
+    <Content Include="HeroII\Maps\Map227.json" />
+    <Content Include="HeroII\Maps\Map228.json" />
+    <Content Include="HeroII\Maps\Map229.json" />
+    <Content Include="HeroII\Maps\Map230.json" />
+    <Content Include="HeroII\Maps\Map231.json" />
+    <Content Include="HeroII\Maps\Map232.json" />
+    <Content Include="HeroII\Maps\Map233.json" />
+    <Content Include="HeroII\Maps\Map234.json" />
+    <Content Include="HeroII\Maps\Map235.json" />
+    <Content Include="HeroII\Maps\Map236.json" />
+    <Content Include="HeroII\Maps\Map237.json" />
+    <Content Include="HeroII\Maps\Map238.json" />
+    <Content Include="HeroII\Maps\Map239.json" />
+    <Content Include="HeroII\Maps\Map240.json" />
+    <Content Include="HeroII\Maps\Map241.json" />
+    <Content Include="HeroII\Maps\Map242.json" />
+    <Content Include="HeroII\Maps\Map243.json" />
+    <Content Include="HeroII\Maps\Map244.json" />
+    <Content Include="HeroII\Maps\Map245.json" />
+    <Content Include="HeroII\Maps\Map246.json" />
+    <Content Include="HeroII\Maps\Map247.json" />
+    <Content Include="HeroII\Maps\Map248.json" />
+    <Content Include="HeroII\Maps\Map249.json" />
+    <Content Include="HeroII\Maps\Map250.json" />
+    <Content Include="HeroII\Maps\Map251.json" />
+    <Content Include="HeroII\Maps\Map252.json" />
+    <Content Include="HeroII\Maps\Map253.json" />
+    <Content Include="HeroII\Maps\Map254.json" />
+    <Content Include="HeroII\Maps\Map255.json" />
+    <Content Include="HeroII\Maps\Map256.json" />
+    <Content Include="HeroII\Maps\Map257.json" />
+    <Content Include="HeroII\Maps\Map258.json" />
+    <Content Include="HeroII\Maps\Map259.json" />
+    <Content Include="HeroII\Maps\Map260.json" />
+    <Content Include="HeroII\Maps\Map261.json" />
+    <Content Include="HeroII\Maps\Map262.json" />
+    <Content Include="HeroII\Maps\Map263.json" />
+    <Content Include="HeroII\Maps\Map264.json" />
+    <Content Include="HeroII\Maps\Map265.json" />
+    <Content Include="HeroII\Maps\Map266.json" />
+    <Content Include="HeroII\Maps\Map267.json" />
+    <Content Include="HeroII\Maps\Map268.json" />
+    <Content Include="HeroII\Maps\Map269.json" />
+    <Content Include="HeroII\Maps\Map270.json" />
+    <Content Include="HeroII\Maps\Map271.json" />
+    <Content Include="HeroII\Maps\Map272.json" />
+    <Content Include="HeroII\Maps\Map273.json" />
+    <Content Include="HeroII\Maps\Map274.json" />
+    <Content Include="HeroII\Maps\Map275.json" />
+    <Content Include="HeroII\Maps\Map276.json" />
+    <Content Include="HeroII\Maps\Map277.json" />
+    <Content Include="HeroII\Maps\Map278.json" />
+    <Content Include="HeroII\Maps\Map279.json" />
+    <Content Include="HeroII\Maps\Map280.json" />
+    <Content Include="HeroII\Maps\Map281.json" />
+    <Content Include="HeroII\Maps\Map282.json" />
+    <Content Include="HeroII\Maps\Map283.json" />
+    <Content Include="HeroII\Maps\Map284.json" />
+    <Content Include="HeroII\Maps\Map285.json" />
+    <Content Include="HeroII\Maps\Map286.json" />
+    <Content Include="HeroII\Maps\Map287.json" />
+    <Content Include="HeroII\Maps\Map288.json" />
+    <Content Include="HeroII\Maps\Map289.json" />
+    <Content Include="HeroII\Maps\Map290.json" />
+    <Content Include="HeroII\Maps\Map291.json" />
+    <Content Include="HeroII\Maps\Map292.json" />
+    <Content Include="HeroII\Maps\Map293.json" />
+    <Content Include="HeroII\Maps\Map294.json" />
+    <Content Include="HeroII\Maps\Map295.json" />
+    <Content Include="HeroII\Maps\Map296.json" />
+    <Content Include="HeroII\Maps\Map297.json" />
+    <Content Include="HeroII\Maps\Map298.json" />
+    <Content Include="HeroII\Maps\Map299.json" />
+    <Content Include="HeroII\Maps\Map300.json" />
+    <Content Include="HeroII\Maps\Map301.json" />
+    <Content Include="HeroII\Maps\Map302.json" />
+    <Content Include="HeroII\Maps\Map303.json" />
+    <Content Include="HeroII\Maps\Map304.json" />
+    <Content Include="HeroII\Maps\Map305.json" />
+    <Content Include="HeroII\Maps\Map306.json" />
+    <Content Include="HeroII\Maps\Map307.json" />
+    <Content Include="HeroII\Maps\Map308.json" />
+    <Content Include="HeroII\Maps\Map309.json" />
+    <Content Include="HeroII\Maps\Map310.json" />
+    <Content Include="HeroII\Maps\Map311.json" />
+    <Content Include="HeroII\Maps\Map312.json" />
+    <Content Include="HeroII\Maps\Map313.json" />
+    <Content Include="HeroII\Maps\Map314.json" />
+    <Content Include="HeroII\Maps\Map315.json" />
+    <Content Include="HeroII\Maps\Map316.json" />
+    <Content Include="HeroII\Maps\Map317.json" />
+    <Content Include="HeroII\Maps\Map318.json" />
+    <Content Include="HeroII\Maps\Map319.json" />
+    <Content Include="HeroII\Maps\Map320.json" />
+    <Content Include="HeroII\Maps\Map321.json" />
+    <Content Include="HeroII\Maps\Map322.json" />
+    <Content Include="HeroII\Maps\Map323.json" />
+    <Content Include="HeroII\Maps\Map324.json" />
+    <Content Include="HeroII\Maps\Map325.json" />
+    <Content Include="HeroII\Maps\Map326.json" />
+    <Content Include="HeroII\Maps\Map327.json" />
+    <Content Include="HeroII\Maps\Map328.json" />
+    <Content Include="HeroII\Maps\Map329.json" />
+    <Content Include="HeroII\Maps\Map330.json" />
+    <Content Include="HeroII\Maps\Map331.json" />
+    <Content Include="HeroII\Maps\Map332.json" />
+    <Content Include="HeroII\Maps\Map333.json" />
+    <Content Include="HeroII\Maps\Map334.json" />
+    <Content Include="HeroII\Maps\Map335.json" />
+    <Content Include="HeroII\Maps\Map336.json" />
+    <Content Include="HeroII\Maps\Map337.json" />
+    <Content Include="HeroII\Maps\Map338.json" />
+    <Content Include="HeroII\Maps\Map339.json" />
+    <Content Include="HeroII\Maps\Map340.json" />
+    <Content Include="HeroII\Maps\Map341.json" />
+    <Content Include="HeroII\Maps\Map342.json" />
+    <Content Include="HeroII\Maps\Map343.json" />
+    <Content Include="HeroII\Maps\Map344.json" />
+    <Content Include="HeroII\Maps\Map345.json" />
+    <Content Include="HeroII\Maps\Map346.json" />
+    <Content Include="HeroII\Maps\Map347.json" />
+    <Content Include="HeroII\Maps\Map348.json" />
+    <Content Include="HeroII\Maps\Map349.json" />
+    <Content Include="HeroII\Maps\Map350.json" />
+    <Content Include="HeroII\Maps\Map351.json" />
+    <Content Include="HeroII\Maps\Map352.json" />
+    <Content Include="HeroII\Maps\Map353.json" />
+    <Content Include="HeroII\Maps\Map354.json" />
+    <Content Include="HeroII\Maps\Map355.json" />
+    <Content Include="HeroII\Maps\Map356.json" />
+    <Content Include="HeroII\Maps\Map357.json" />
+    <Content Include="HeroII\Maps\Map358.json" />
+    <Content Include="HeroII\Maps\Map359.json" />
+    <Content Include="HeroII\Maps\Map360.json" />
+    <Content Include="HeroII\Maps\Map361.json" />
+    <Content Include="HeroII\Maps\Map362.json" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
